# MGI

./: .gitignore  README.md  pyproject.toml  who_audit.csv
mgi/: __init__.py  build.py  guideline_record.py  integration.py  issuers.yaml  registry.py  resolve.py  search.py  seed_guidelines.jsonl  service.py  store.py
mgi/crawl/: __init__.py  base.py  sitemap.py  strategies.py
notebooks/: mgi_quickstart.ipynb
scripts/: build_index.py  dump_issuers_csv.py
tests/: test_crawl.py  test_guideline_record.py  test_integration.py  test_registry.py  test_resolve.py  test_search.py  test_service.py  test_store.py
